bump: 发布2.0.0
details see: https://helio.uncarbon.cc/#/i18n/zh-CN/appendix/change-log